# vibe-editor

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-04-14-git-integration.md  2026-04-14-vibe-editor.md  2026-04-16-code-editor-themes.md  2026-04-16-markdown-preview-split-pane.md
docs/superpowers/specs/: 2026-04-14-git-integration-design.md  2026-04-14-vibe-editor-design.md  2026-04-15-code-editor-themes-design.md  2026-04-16-markdown-preview-split-pane-design.md
src/: App.tsx  editor-themes.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  fs_service.rs  git_service.rs  lib.rs  main.rs  pty_manager.rs  search.rs
src-tauri/tests/: fs_service_test.rs  git_service_test.rs  pty_manager_test.rs  search_test.rs
src/components/: AppShell.tsx  BranchPicker.tsx  CommitDiffTab.tsx  ContextMenu.tsx  DiffTab.tsx  EditorTab.tsx  FileTree.tsx  FileTreeNode.tsx  FuzzyFinder.tsx  GitLogTab.tsx  GitPanel.tsx  HoldToQuit.tsx  MarkdownPreview.tsx  SearchPanel.tsx  SettingsModal.tsx  Sidebar.tsx  SplitDivider.tsx  TabBar.tsx  TabGroup.tsx  TabGroupManager.tsx  TerminalTab.tsx  TitleBar.tsx  Toast.tsx  WelcomeScreen.tsx  fileIcons.tsx
src/editor/: cmd-click.ts
src/hooks/: use-file-system.ts  use-pty.ts  use-tab-drag.ts  useGitDiff.ts
src/store/: app-store.ts  git-store.ts  settings-store.ts  sidebar-store.ts  tab-store.ts  toast-store.ts
src/styles/: globals.css  markdown-preview.css
