[package]
name = "vibe-editor"
version = "0.1.0"
description = "A terminal-first macOS code editor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vibe_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = { version = "7", features = ["macos_fsevent"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
tauri-plugin-dialog = "2.7.0"

[dev-dependencies]
tempfile = "3"

